--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,74 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+section {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+nav {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+nav {
+    padding-top: 32px;
+    display: flex;
+}
+
+menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 378px;
+    margin: 24px 16px;
+    padding: 32px;
+    background-color: #fff;
+    border: 1px solid rgb(229, 231, 235);
+    border-radius: 8px;
+    z-index: 4;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(300%);
+    transition: all 300ms ease;
+}
+
+.btn {
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border: none;
+    border-radius: 500px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+.btn__menu {
+    background-color: transparent;
+    border: none;
+    display: none;
+    transition: all 300ms ease;
+}
+
+.btn__menu--close {
+    position: fixed;
+    top: 24px;
+    right: 18px;
+}
+
+button {
+    cursor: pointer;
+    border: none;
+}
+
 div {
     display: block;
     unicode-bidi: isolate;
@@ -30,30 +98,6 @@ h2 {
 p {
     font-size: 18px;
     line-height: 1.5;
-}
-
-button {
-    appearance: auto;
-    text-rendering: auto;
-    color: buttontext;
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    cursor: default;
-    box-sizing: border-box;
-    background-color: buttonface;
-    margin: 0em 0em 0em 0em;
-    padding-block: 1px;
-    padding-inline: 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-color: buttonborder;
-    border-image: initial;
 }
 
 .row {
@@ -93,12 +137,6 @@ button {
     padding-bottom: 2px;
 }
 
-@media (max-width: 1024px) {
-    .nav__links {
-        display: none;
-    }
-}
-
 .nav__link {
     font-size: 14px;
     font-weight: 600;
@@ -120,6 +158,7 @@ button {
 .nav__link {
     margin: 0 24px;
 }
+
 a {
     display: inline;
     text-decoration: none;
@@ -183,6 +222,59 @@ header .row {
     bottom: 0;
     z-index: 1;
     transition: border-color 300ms;
+}
+
+input {
+    font-style: ;
+    font-variant-ligatures: ;
+    font-variant-caps: ;
+    font-variant-numeric: ;
+    font-variant-east-asian: ;
+    font-variant-alternates: ;
+    font-variant-position: ;
+    font-variant-emoji: ;
+    font-weight: ;
+    font-stretch: ;
+    font-size: ;
+    font-family: ;
+    font-optical-sizing: ;
+    font-size-adjust: ;
+    font-kerning: ;
+    font-feature-settings: ;
+    font-variation-settings: ;
+    text-rendering: auto;
+    color: fieldtext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: start;
+    appearance: auto;
+    -webkit-rtl-ordering: logical;
+    cursor: text;
+    background-color: field;
+    margin: 0em 0em 0em 0em;
+    padding: 1px 0px;
+    border-width: 2px;
+    border-style: inset;
+    border-color: light-dark(rgb(118, 118, 118), rgb(133, 133, 133));
+    border-image: initial;
+    padding-block: 1px;
+    padding-inline: 2px;
+}
+
+input:not([type="file" i], [type="image" i], [type="checkbox" i], [type="radio" i]) {
+}
+
+input[type="text" i] {
+    padding-block: 1px;
+    padding-inline: 2px;
+}
+
+input:not([type="file" i], [type="image" i], [type="checkbox" i], [type="radio" i]) {
 }
 
 .header__email--btn {
@@ -378,37 +470,6 @@ img {
     z-index: 0;
     display: block;
 }
-
-.btn {
-    background-color: #6415ff;
-    padding: 12px 32px;
-    border: none;
-    border-radius: 500px;
-    font-size: 14px;
-    color: #fff;
-    font-weight: bold;
-    transition: all 300ms ease;
-    cursor: pointer;
-}
-
-@media (max-width: 1024px) {
-    .btn__menu {
-        display: block;
-    }
-}
-.btn__menu {
-    background-color: transparent;
-    border: none;
-    display: none;
-    transition: all 300ms ease;
-}
-
-.btn__menu--close {
-    position: fixed;
-    top: 24px;
-    right: 18px;
-}
-
 
 #quality .btn {
     margin-top: 32px;
@@ -674,11 +735,6 @@ img {
     font-size: 0.875rem;
     text-transform: uppercase;
     letter-spacing: 0.05em;
-}
-
-button {
-    cursor: pointer;
-    border: none;
 }
 
 .plan__target {
@@ -1094,26 +1150,6 @@ body {
     overflow-y: hidden;
 }
 
-
-@media (max-width: 1280px) {
-    header .row {
-        align-items: flex-end;
-    }
-}
-
-@media (max-width: 1024px) {
-    header .row {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-.row {
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-}
-
 .menu {
     position: fixed;
     top: 0;
@@ -1132,3 +1168,259 @@ body {
     transition: all 300ms ease;
 }
 
+
+@media (max-width: 1280px) {
+    header .row {
+        align-items: flex-end;
+    }
+        h1 {
+        font-size: 36px;
+        color: #1a202c;
+        line-height: 1.25;
+    }
+        .header__description--para {
+        font-size: 16px;
+    }
+        .header__customers {
+        padding-right: 64px;
+    }
+        .header__img--wrapper {
+        display: flex;
+        justify-content: flex-end;
+    }
+        .plan__bottom {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    .testimonials__img {
+        width: 40%;
+    }
+        .testimonials__description {
+        width: calc(100% - 40%);
+    }
+}
+
+
+@media (max-width: 1024px) {
+    .nav__links {
+        display: none;
+    }
+    .btn__menu {
+        display: block;
+    }
+    .header__description {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__description, .header__img--wrapper {
+        width: 100%;
+        max-width: 512px;
+        margin: 0 auto;
+    }
+        h1 {
+        font-size: 30px;
+    }
+    .header__description--para {
+        margin: 20px 0;
+    }
+        .header__customers {
+        padding-right: 0px;
+    }
+        .header__customers--title, .header__img--wrapper {
+        margin-top: 48px;
+    }
+        #features .section__title, #pricing .section__title {
+        font-size: 48px;
+    }
+        .section__para {
+        font-size: 16px;
+    }
+        .features {
+        max-width: 768px;
+    }
+    .feature {
+        width: calc(50%);
+    }
+    .feature__row {
+        padding: 32px 8px;
+        margin: 0 16px;
+    }
+        .feature__title {
+        line-height: 1;
+    }
+        .feature__para {
+        max-width: none;
+    }
+    .quality__description {
+        margin-right: 0px;
+        padding-right: 48px;
+    }
+    .plans {
+        flex-direction: column;
+        align-items: center;
+    }
+        .plan {
+        margin-right: 0px;
+    }
+        #testimonials .container {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+    .testimonials__description {
+        padding-left: 48px;
+    }
+        #start .container {
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+    }
+        .start__row {
+        flex-direction: column;
+    }
+        .start__title {
+        text-align: center;
+        width: 100%;
+        max-width: 512px;
+    }
+        .start__buttons {
+        width: auto;
+        margin-top: 24px;
+    }
+        .start__button {
+        padding: 16px 32px;
+    }
+        footer {
+        padding: 80px 32px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .section__para {
+        font-size: 14px;
+    }
+        .features {
+        justify-content: center;
+    }
+        .feature {
+        width: auto;
+        max-width: 384px;
+    }
+    #quality .row, #values .row {
+        flex-direction: column-reverse;
+    }
+        .quality__description, .quality__img--wrapper, .steps__description, .steps__img--wrapper, .values__description, .values__img, .testimonials__description, .testimonials__img {
+        width: 100%;
+        max-width: 448px;
+    }
+    .quality__description, .steps__description, .values__description, .testimonials__description {
+        padding: 0;
+        margin-top: 64px;
+        text-align: center;
+    }
+        #steps .row, #testimonials .row {
+        flex-direction: column;
+    }
+    .testimonials__description {
+        padding-left: 0;
+    }
+        .footer__columns {
+        justify-content: flex-start;
+    }
+        .footer__bottom {
+        flex-direction: column;
+        align-items: center;
+    }
+        .footer__copyright, .footer__socials {
+        margin-top: 32px;
+    }
+        .footer__socials {
+        margin-left: 0px;
+    }
+    footer__copyright, .footer__socials {
+        margin-top: 32px;
+    }
+        .footer__social--link:first-child {
+        margin-left: 0px;
+    }
+}
+
+
+    @media (max-width: 640px) {
+        .nav__logo {
+        margin: 8px 0;
+        padding-bottom: 4px;
+    }
+    .container {
+        padding: 80px 0;
+    }
+    
+    header .row {
+        flex-direction: column;
+        align-items: center;
+        }
+
+    .header__email {
+        flex-direction: column;
+        height: auto;
+    }
+        
+    .header__email--input {
+        position: static;
+        padding: 16px 0;
+        padding-left: 32px;
+        line-height: 1.5;
+    }
+
+    .header__email--btn {
+        width: 100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
+
+    main {
+        margin-bottom: 80px;
+    }
+
+     #features .section__title, #pricing .section__title {
+        font-size: 36px;
+    }
+
+    .section__title {
+        line-height: 1.25;
+    }
+
+    .feature__row {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+        .feature__text {
+        margin-left: 0px;
+        margin-top: 16px;
+    }
+
+    .feature__title {
+        letter-spacing: 0.025em;
+        line-height: 1;
+    }
+
+        .feature__para {
+        margin-top: 4px;
+        line-height: 2;
+    }
+
+        .footer__columns {
+        justify-content: center;
+    }
+
+        .footer__copyright {
+        font-size: 14px;
+        text-align: center;
+        line-height: 1.5;
+    }
+}
